<resources>
    <string name="app_name">TsfChat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Only Numbers,Alphabet characters and .-_@</string>
    <string name="prompt_password">Type Password Here</string>
    <string name="prompt_displayname">Type Display Name Here</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="option_menu_done">done</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="group_name_hint">Type group name here       </string>
    <string name="group_upload_text">Give your group a name and add optional photo</string>
    <string name="chat_with_stranger">Chat With Stranger</string>
    <string name="stranger_chat_guidance">"Enter the username of your chat target\nex:&quot;demo@qiscus.com&quot; "</string>
    <string name="empty_room_guidance">Start 1 on 1 chat with stranger or group chat with your friend. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
